--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 asgiref==3.4.1
 attrs==21.2.0
 Django==3.2.7
+django-webpack-loader==1.4.0
 djangorestframework==3.12.4
 drf-spectacular==0.19.0
 inflection==0.5.1
